// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-1.emotion-1.emotion-1>*:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Stack bb-FieldStack"
>
  <div
    class="emotion-2 emotion-3 bb-Box"
  />
  <div
    class="emotion-2 emotion-3 bb-Box"
  />
</div>
`;

exports[`composition hook should return with FieldStack props 1`] = `
Object {
  "className": "css-1fie8gx css-17a5cnv css-63it0p css-1qnz8fc bb-Box bb-Stack bb-FieldStack",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-1.emotion-1.emotion-1>*:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Stack bb-FieldStack"
>
  <div
    class="emotion-2 emotion-3 bb-Box"
  />
  <div
    class="emotion-2 emotion-3 bb-Box"
  />
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-1.emotion-1.emotion-1>*:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  color: var(--bb-palette-primary, #000000)!important;
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 test bb-Box bb-Stack bb-FieldStack"
>
  <div
    class="emotion-2 emotion-5 bb-Box"
  />
  <div
    class="emotion-2 emotion-5 bb-Box"
  />
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-1.emotion-1.emotion-1>*:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Stack bb-FieldStack"
>
  <div
    class="emotion-2 emotion-3 bb-Box"
  />
  <div
    class="emotion-2 emotion-3 bb-Box"
  />
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-1.emotion-1.emotion-1>*:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  color: var(--bb-palette-primary, #000000)!important;
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Stack bb-FieldStack"
>
  <div
    class="emotion-2 emotion-5 bb-Box"
  />
  <div
    class="emotion-2 emotion-5 bb-Box"
  />
</div>
`;

exports[`props should render correctly with orientation prop 1`] = `
@media screen and (min-width: 1024px) {
  .emotion-1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }

  .emotion-1>* {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }

  .emotion-1>*:not(:last-child) {
    margin-right: 1rem;
  }
}

@media screen and (max-width: 1024px) {
  .emotion-1.emotion-1.emotion-1>*:not(:last-child) {
    margin-bottom: 1rem;
  }
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Stack bb-FieldStack"
>
  <div
    class="emotion-2 emotion-3 bb-Box"
  />
  <div
    class="emotion-2 emotion-3 bb-Box"
  />
</div>
`;

exports[`props should render correctly with spacing prop 1`] = `
.emotion-1.emotion-1.emotion-1>*:not(:last-child) {
  margin-bottom: 2rem;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Stack bb-FieldStack"
>
  <div
    class="emotion-2 emotion-3 bb-Box"
  />
  <div
    class="emotion-2 emotion-3 bb-Box"
  />
</div>
`;

exports[`theming FieldStack.base should render correctly 1`] = `
.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1.emotion-1.emotion-1>*:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Stack bb-FieldStack"
>
  <div
    class="emotion-2 emotion-3 bb-Box"
  />
  <div
    class="emotion-2 emotion-3 bb-Box"
  />
</div>
`;
